--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -5191,7 +5191,7 @@
                                 <div>
                                   <div class="_1zeg3u">
                                     <div class="section-container">
-                                      <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
+                                      <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                         <div class="main-content__details-button-wrapper">
                                           <div class="flex-before-after dir dir-ltr">
                                             <div data-plugin-in-point-id="NAV_DEFAULT" data-section-id="NAV_DEFAULT"
@@ -19158,7 +19158,7 @@
                                   --dls19-brand-color: var(--gray-900);
                                 ">
                           <div class="section-container">
-                            <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
+                            <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                               <section>
                                 <div class="modal__items">
                                   <div class="_a2ybhdi">
@@ -20094,7 +20094,7 @@
                                   --dls19-brand-color: var(--gray-900);
                                 ">
                           <div class="section-container">
-                            <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
+                            <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                               <section>
                                 <div class="modal__items" style="
                                           margin-left: 0 !important;
@@ -21233,7 +21233,7 @@
                                   --dls19-brand-color: var(--gray-900);
                                 ">
                           <div class="section-container">
-                            <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
+                            <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                               <section>
                                 <div class="modal__items">
                                   <div class="_1lwleztw">
@@ -27922,7 +27922,7 @@
                             <div class="_1rabovf" data-testid="modal-sheet-availability-calendar">
                               <div class="_yabr07">
                                 <div class="section-container">
-                                  <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                                  <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                     <div>
                                       <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
                                         <div class="t5p7tdn dir dir-ltr">
@@ -29211,7 +29211,7 @@
                             data-section-id="BOOK_IT_CALENDAR_SHEET">
                             <div class="_1ylz08x">
                               <div class="section-container">
-                                <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                                <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                   <div class="_9p0plx" data-testid="book-it-default">
                                     <div class="_754m05">
                                       <div
