--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2323,7 +2323,7 @@
                       <div class="flex-before-after dir dir-ltr" style="">
                         <div style="--gp-section-max-width:1120px;">
                           <div class="section-container">
-                            <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                            <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                               <div id="filter-experiences-button" data-plugin-in-point-id="INBOX_FILTERS_LISTING" data-section-id="INBOX_FILTERS_LISTING" style="padding-top: 32px; padding-bottom: 32px;">
                                 <button type="button" class="link">
                                   <div class="_zjunba">
@@ -2348,7 +2348,7 @@
                       <div class="flex-before-after dir dir-ltr" style="">
                         <div style="--gp-section-max-width:1120px;">
                           <div class="section-container">
-                            <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                            <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                               <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);">
                               </div>
                               <div data-plugin-in-point-id="INBOX_FILTERS_MESSAGE_TYPE" data-section-id="INBOX_FILTERS_MESSAGE_TYPE" style="padding-top: 32px; padding-bottom: 32px;">
@@ -2459,7 +2459,7 @@
                           <div class="flex-before-after dir dir-ltr">
                               <div style="--gp-section-max-width:1120px;">
                                   <div class="section-container">
-                                      <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                                      <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                           <div data-plugin-in-point-id="INBOX_LISTING_PICKER"
                                               data-section-id="INBOX_LISTING_PICKER"
                                               style="padding-bottom: 72px;">
