--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1279,7 +1279,7 @@
                                       <div style="--gp-section-max-width:1120px;">
                                         <div class="_vl8fo3" style="border-top-color: rgb(235, 235, 235);"></div>
                                         <div class="section-container">
-                                          <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                                          <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                             <div data-plugin-in-point-id="TITLE_ADDITIONAL_REQUIREMENT" data-section-id="TITLE_ADDITIONAL_REQUIREMENT"
                                               style="padding-top: 24px; padding-bottom: 24px;">
                                               <section>
@@ -1295,7 +1295,7 @@
                                     <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width:1120px;">
                                         <div class="section-container">
-                                          <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                                          <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                             <div data-plugin-in-point-id="FIRST_MESSAGE" data-section-id="FIRST_MESSAGE" style="padding-bottom: 24px;">
                                               <div id="required-first-message-section">
                                                 <div class="_b7b6bk">
@@ -1318,7 +1318,7 @@
                                     <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width:1120px;">
                                         <div class="section-container">
-                                          <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                                          <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                             <div data-plugin-in-point-id="PHONE_VERIFICATION" data-section-id="PHONE_VERIFICATION"
                                               style="padding-bottom: 24px;">
                                               <div class="_b7b6bk">
@@ -1340,7 +1340,7 @@
                                     <div class="flex-before-after dir dir-ltr">
                                       <div style="--gp-section-max-width:1120px;">
                                         <div class="section-container">
-                                          <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                                          <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                             <div data-plugin-in-point-id="PROFILE_PHOTO" data-section-id="PROFILE_PHOTO" style="padding-bottom: 24px;">
                                               <div class="_b7b6bk">
                                                 <div class="_1qyi2pa">
@@ -1514,7 +1514,7 @@
                                         ></div>
                                         <div class="section-container">
                                           <div
-                                            class="wrapper-full mq5rv0q dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -1756,7 +1756,7 @@
                                             );
                                           "></div>
                                         <div class="section-container">
-                                          <div class="wrapper-full mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
+                                          <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
                                             <div data-plugin-in-point-id="LOGIN_PHONE_AUTH_FLOW" data-section-id="LOGIN_PHONE_AUTH_FLOW" style="
                                               padding-top: 32px;
                                               padding-bottom: 24px;
