--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -6960,7 +6960,7 @@
                                                   class="b1k5q1b3 v18vkvko dir dir-ltr"
                                                 >
                                                   <span
-                                                    class="flex f-items-center flex atm_7l_18pqv07 atm_bx_1ltc5j7 atm_cs_qo5vgd fs-normal lh-medium dir dir-ltr"
+                                                    class="flex f-items-center flex atm_7l_18pqv07 atm_bx_1ltc5j7 font-semibold fs-normal lh-medium dir dir-ltr"
                                                     ><span class="mr-4 dir dir-ltr"
                                                       ><svg
                                                         viewBox="0 0 32 32"
