--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6682,7 +6682,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                     <div class="c1fhr3yj dir dir-ltr">
                                                       <button data-testid="user-flag-report-button" type="button" class="b1k5q1b3 v18vkvko dir dir-ltr">
                                                         <span
-                                                          class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd fs-small lh-small dir dir-ltr"><span
+                                                          class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 font-semibold fs-small lh-small dir dir-ltr"><span
                                                             class="mr-4 dir dir-ltr"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                               aria-hidden="true" role="presentation" focusable="false" style="
                                                                                                           display: block;
