--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -13243,7 +13243,7 @@
                                                       data-modal="#report-this-modal" type="button"
                                                       class="b1k5q1b3 v18vkvko dir dir-ltr">
                                                       <span
-                                                        class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd fs-small lh-small dir dir-ltr"><span
+                                                        class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 font-semibold fs-small lh-small dir dir-ltr"><span
                                                           class="mr-4 dir dir-ltr"><svg viewBox="0 0 32 32"
                                                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                             role="presentation" focusable="false" style="
@@ -13737,7 +13737,7 @@
                                                     <button data-testid="user-flag-report-button" type="button"
                                                       class="b1k5q1b3 v18vkvko dir dir-ltr">
                                                       <span
-                                                        class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd fs-small lh-small dir dir-ltr"><span
+                                                        class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 font-semibold fs-small lh-small dir dir-ltr"><span
                                                           class="mr-4 dir dir-ltr"><svg viewBox="0 0 32 32"
                                                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                             role="presentation" focusable="false" style="
@@ -14182,7 +14182,7 @@
                                                     <button data-testid="user-flag-report-button" type="button"
                                                       class="b1k5q1b3 v18vkvko dir dir-ltr">
                                                       <span
-                                                        class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd fs-small lh-small dir dir-ltr"><span
+                                                        class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 font-semibold fs-small lh-small dir dir-ltr"><span
                                                           class="mr-4 dir dir-ltr"><svg viewBox="0 0 32 32"
                                                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                             role="presentation" focusable="false" style="
