--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -3963,7 +3963,7 @@
                                                         class="b1k5q1b3 v18vkvko dir dir-ltr"
                                                       >
                                                         <span
-                                                          class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd fs-small lh-small dir dir-ltr"
+                                                          class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 font-semibold fs-small lh-small dir dir-ltr"
                                                           ><span
                                                             class="mr-4 dir dir-ltr"
                                                             ><svg
