--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -299,7 +299,7 @@
                                      </div>
                                      <div>
                                       <div class="_4gelgl">E1</div>
-                                      <div class="_1ir6ymk">A. Bonifacio, Quezon City, Metro Manila</div>
+                                      <div class="text-sm">A. Bonifacio, Quezon City, Metro Manila</div>
                                      </div>
                                     </li>
                                     <li class="_k6xoo0" role="option" tabindex="-1" aria-selected="false" id="autocomplete-result-1" loggingid="lys.location.enterAddressManually" eventdataschema="ListYourSpaceStepActionEvent" eventdata="[object Object]">
