--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1330,7 +1330,7 @@
                                                             </span>
                                                           </div>
                                                           <div class="_z1k5n76">Join a video call</div>
-                                                          <div class="_1ir6ymk"><span class="ll4r2nl dir dir-ltr">Use Zoom to participate on your desktop or mobile
+                                                          <div class="text-sm"><span class="ll4r2nl dir dir-ltr">Use Zoom to participate on your desktop or mobile
                                                             device. After you book you’ll receive an email with a link and details on how to join.</span>
                                                           </div>
                                                         </div>
@@ -1351,7 +1351,7 @@
                                                             </span>
                                                           </div>
                                                           <div class="_z1k5n76">Book a private group</div>
-                                                          <div class="_1ir6ymk"><span class="ll4r2nl dir dir-ltr">Kat can host private groups of any size, up to 100
+                                                          <div class="text-sm"><span class="ll4r2nl dir dir-ltr">Kat can host private groups of any size, up to 100
                                                                 guests. Private group rates start at ₱4,651.</span>
                                                           </div>
                                                         </div>
@@ -6224,7 +6224,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                   </path>
                                                                 </svg></div>
                                                               <div class="_z1k5n76">Join a video call</div>
-                                                              <div class="_1ir6ymk"><span class="ll4r2nl dir dir-ltr">Use Zoom to participate on your desktop or mobile
+                                                              <div class="text-sm"><span class="ll4r2nl dir dir-ltr">Use Zoom to participate on your desktop or mobile
                                                                   device. After you book you’ll receive an email with a link and details on how to join.</span></div>
                                                             </div>
                                                           </div>
@@ -6243,7 +6243,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                   </path>
                                                                 </svg></div>
                                                               <div class="_z1k5n76">Book a private group</div>
-                                                              <div class="_1ir6ymk"><span class="ll4r2nl dir dir-ltr">Kat can host private groups of any size, up to 100
+                                                              <div class="text-sm"><span class="ll4r2nl dir dir-ltr">Kat can host private groups of any size, up to 100
                                                                   guests. Private group rates start at ₱4,651.</span></div>
                                                             </div>
                                                           </div>
