--- a/payments/service-fee.html
+++ b/payments/service-fee.html
@@ -308,7 +308,7 @@
       Service fee settings
     </h1>
   </div>
-  <div class="_1ir6ymk">
+  <div class="text-sm">
     Choose a service fee pricing option for all of your listings.
   </div>
   <div style="margin-top: 16px; margin-bottom: 16px">
@@ -805,7 +805,7 @@
                                                   Service fee settings
                                                 </h2>
                                               </div>
-                                              <div class="_1ir6ymk">
+                                              <div class="text-sm">
                                                 Choose a service fee pricing
                                                 option for all of your listings.
                                               </div>
