payment-option-dropdown-pay-with

--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6154,7 +6154,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                           <div class="flex-before-after1 dir dir-ltr">
                                             <div style="">
                                               <div class="contact-host__border-top-color" style="border-top-color: rgb(221,221,221);"></div>
-                                              <div class="_1vjikx5">                                          
+                                              <div class="payment-option-dropdown-pay-with">                                          
                                                 <div data-plugin-in-point-id="DESCRIPTION_DEFAULT" data-section-id="DESCRIPTION_DEFAULT"
                                                   style="padding-top: 48px; padding-bottom: 48px;">
                                                   <section>
@@ -6197,7 +6197,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                           <div class="flex-before-after1 dir dir-ltr">
                                             <div style="--gp-section-max-width: 1120px;">
                                               <div class="contact-host__border-top-color" style="border-top-color: rgb(221,221,221);"></div>
-                                              <div class="_1vjikx5">
+                                              <div class="payment-option-dropdown-pay-with">
                                                 <div data-plugin-in-point-id="HOW_TO_JOIN" data-section-id="HOW_TO_JOIN"
                                                   style="padding-top: 48px; padding-bottom: 48px;">
                                                   <section>
@@ -6261,7 +6261,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                           <div class="flex-before-after1 dir dir-ltr">
                                             <div style="--gp-section-max-width: 1120px;">
                                               <div class="contact-host__border-top-color" style="border-top-color: rgb(221,221,221);"></div>
-                                              <div class="_1vjikx5">
+                                              <div class="payment-option-dropdown-pay-with">
                                                 <div data-plugin-in-point-id="HOW_TO_JOIN" data-section-id="HOW_TO_JOIN"
                                                   style="padding-top: 48px; padding-bottom: 48px;">
                                                   
@@ -7181,7 +7181,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                         <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
 
                                           <div class="contact-host__border-top-color" style="border-top-color: rgb(221,221,221);"></div>
-                                          <div class="_1vjikx5" style="margin-bottom: 0px!important;">
+                                          <div class="payment-option-dropdown-pay-with" style="margin-bottom: 0px!important;">
                                             <div data-plugin-in-point-id="EDUCATION_EXPERIENCES" data-section-id="EDUCATION_EXPERIENCES"
                                               style="padding-top: 64px; padding-bottom: 64px;">
                                               <section>
