--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -444,7 +444,7 @@
                                                 padding-top: 32px;
                                                 padding-bottom: 24px;
                                               ">
-                                            <div class="_1vjikx5">
+                                            <div class="payment-option-dropdown-pay-with">
                                               <div class="_1t2btyf">
                                                 <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                   aria-hidden="true" role="presentation" focusable="false" style="
@@ -470,7 +470,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1vjikx5">
+                                            <div class="payment-option-dropdown-pay-with">
                                               <div class="_1t2btyf">
                                                 <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                   aria-hidden="true" role="presentation" focusable="false" style="
@@ -495,7 +495,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1vjikx5">
+                                            <div class="payment-option-dropdown-pay-with">
                                               <div class="_1t2btyf">
                                                 <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                   aria-hidden="true" role="presentation" focusable="false" style="
