--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -1708,7 +1708,7 @@
                                                 padding-bottom: 24px;
                                               "
                                             >
-                                              <div class="_1vjikx5">
+                                              <div class="payment-option-dropdown-pay-with">
                                                 <div class="_1t2btyf">
                                                   <svg
                                                     viewBox="0 0 32 32"
@@ -1742,7 +1742,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="_1vjikx5">
+                                              <div class="payment-option-dropdown-pay-with">
                                                 <div class="_1t2btyf">
                                                   <svg
                                                     viewBox="0 0 32 32"
@@ -1775,7 +1775,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="_1vjikx5">
+                                              <div class="payment-option-dropdown-pay-with">
                                                 <div class="_1t2btyf">
                                                   <svg
                                                     viewBox="0 0 32 32"
