--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -508,7 +508,7 @@
                                           <div data-plugin-in-point-id="HIGHLIGHTS_DEFAULT"
                                             data-section-id="HIGHLIGHTS_DEFAULT"
                                             style="padding-top: 32px; padding-bottom: 24px;">
-                                            <div class="_1vjikx5">
+                                            <div class="payment-option-dropdown-pay-with">
                                               <div class="_1t2btyf"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false"
@@ -523,7 +523,7 @@
                                                     &amp; Dané Erwee</span></div>
                                               </div>
                                             </div>
-                                            <div class="_1vjikx5">
+                                            <div class="payment-option-dropdown-pay-with">
                                               <div class="_1t2btyf"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                   role="presentation" focusable="false"
@@ -6265,7 +6265,7 @@
                                             <div data-plugin-in-point-id="HIGHLIGHTS_DEFAULT"
                                               data-section-id="HIGHLIGHTS_DEFAULT"
                                               style="padding-top: 48px; padding-bottom: 48px;">
-                                              <div class="_1vjikx5">
+                                              <div class="payment-option-dropdown-pay-with">
                                                 <div class="_1t2btyf"><svg viewBox="0 0 32 32"
                                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                     role="presentation" focusable="false"
@@ -6280,7 +6280,7 @@
                                                       &amp; Dané Erwee</span></div>
                                                 </div>
                                               </div>
-                                              <div class="_1vjikx5">
+                                              <div class="payment-option-dropdown-pay-with">
                                                 <div class="_1t2btyf"><svg viewBox="0 0 32 32"
                                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                     role="presentation" focusable="false"
