--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -639,7 +639,7 @@
                                                                 padding-top: 32px;
                                                                 padding-bottom: 24px;
                                                               ">
-                                            <div class="_1vjikx5">
+                                            <div class="payment-option-dropdown-pay-with">
                                               <div class="_1t2btyf">
                                                 <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                   aria-hidden="true" role="presentation" focusable="false" style="
@@ -665,7 +665,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1vjikx5">
+                                            <div class="payment-option-dropdown-pay-with">
                                               <div class="_1t2btyf">
                                                 <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                   aria-hidden="true" role="presentation" focusable="false" style="
@@ -690,7 +690,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1vjikx5">
+                                            <div class="payment-option-dropdown-pay-with">
                                               <div class="_1t2btyf">
                                                 <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                   aria-hidden="true" role="presentation" focusable="false" style="
@@ -6000,7 +6000,7 @@
                                                   padding-top: 32px;
                                                   padding-bottom: 32px;
                                                 ">
-                                              <div class="_1vjikx5">
+                                              <div class="payment-option-dropdown-pay-with">
                                                 <div class="_1t2btyf">
                                                   <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                     aria-hidden="true" role="presentation" focusable="false" style="
@@ -6027,7 +6027,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="_1vjikx5">
+                                              <div class="payment-option-dropdown-pay-with">
                                                 <div class="_1t2btyf">
                                                   <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                     aria-hidden="true" role="presentation" focusable="false" style="
@@ -6052,7 +6052,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="_1vjikx5">
+                                              <div class="payment-option-dropdown-pay-with">
                                                 <div class="_1t2btyf">
                                                   <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                     aria-hidden="true" role="presentation" focusable="false" style="
