--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -3350,7 +3350,7 @@
                                                   padding-bottom: 24px;
                                                 "
                                               >
-                                                <div class="_1vjikx5" style="width: 100%;">
+                                                <div class="payment-option-dropdown-pay-with" style="width: 100%;">
                                                   <div class="ml-4" style="width: 100%;">
                                                     <div class="_1qsawv5" style="width: 100%;">
                                                       <span aria-busy="true" style="display: block; height: 20px; width: 45%; background-color: white; border-radius: 4px;">
@@ -3370,7 +3370,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_1vjikx5" style="width: 100%;">
+                                                <div class="payment-option-dropdown-pay-with" style="width: 100%;">
                                                   <div class="ml-4" style="width: 100%;">
                                                     <div class="_1qsawv5" style="width: 100%;">
                                                       <span aria-busy="true" style="display: block; height: 20px; width: 45%; background-color: white; border-radius: 4px;">
@@ -3390,7 +3390,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_1vjikx5" style="width: 100%;">
+                                                <div class="payment-option-dropdown-pay-with" style="width: 100%;">
                                                   <div class="ml-4" style="width: 100%;">
                                                     <div class="_1qsawv5" style="width: 100%;">
                                                       <span aria-busy="true" style="display: block; height: 20px; width: 45%; background-color: white; border-radius: 4px;">
