Rename new components card-availability, btn-mask-image, btn-background-image, btn-text

--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -110,9 +110,9 @@
                                     <a
                                       href="https://www.airbnb.com/help/article/1578/how-do-i-host-a-social-impact-experience#section-heading-0-2"
                                       class="btn-primary w-auto"
-                                      ><span class="tjxdvlu dir dir-ltr"
+                                      ><span class="btn-mask-image dir dir-ltr"
                                         ><span
-                                          class="t12u7nq4 dir dir-ltr"
+                                          class="btn-background-image dir dir-ltr"
                                           style="
                                             background-position: calc(
                                                 (100 - var(--mouse-x, 0)) * 1%
@@ -122,7 +122,7 @@
                                               );
                                           "
                                         ></span></span
-                                      ><span class="c4wd1yj dir dir-ltr"
+                                      ><span class="btn-text dir dir-ltr"
                                         >Get Started<!-- -->
                                       </span></a
                                     >
