--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -5228,9 +5228,9 @@
                                                   <div class="products-container__book-it-default">
                                                     <div class=" dir dir-ltr"><button data-testid="homes-pdp-cta-btn"
                                                         type="button" class="_108mstlv"><span
-                                                          class="tjxdvlu dir dir-ltr"><span class="t12u7nq4 dir dir-ltr"
+                                                          class="btn-mask-image dir dir-ltr"><span class="btn-background-image dir dir-ltr"
                                                             style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%);"></span></span><span
-                                                          class="c4wd1yj dir dir-ltr">Check availability
+                                                          class="btn-text dir dir-ltr">Check availability
                                                         </span></button></div>
                                                   </div>
                                                 </div>
