--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -5292,8 +5292,8 @@
                                                         <div class="dir dir-ltr">
                                                           <button data-testid="homes-pdp-cta-btn" type="button"
                                                             class="_108mstlv">
-                                                            <span class="tjxdvlu dir dir-ltr"><span
-                                                                class="t12u7nq4 dir dir-ltr" style="
+                                                            <span class="btn-mask-image dir dir-ltr"><span
+                                                                class="btn-background-image dir dir-ltr" style="
                                                                     background-position: calc(
                                                                         (
                                                                             100 -
@@ -5315,7 +5315,7 @@
                                                                     --mouse-x: 81.3125;
                                                                     --mouse-y: 95.8632;
                                                                   "></span></span><span
-                                                              class="c4wd1yj dir dir-ltr">Check
+                                                              class="btn-text dir dir-ltr">Check
                                                               availability
                                                             </span>
                                                           </button>
