--- a/help/feedback.html
+++ b/help/feedback.html
@@ -612,9 +612,9 @@
                             <a
                               href="/login?redirect_url=https%3A%2F%2Fwww.airbnb.com%2Fhelp%2Ffeedback"
                               class="btn-primary w-auto"
-                              ><span class="tjxdvlu dir dir-ltr"
+                              ><span class="btn-mask-image dir dir-ltr"
                                 ><span
-                                  class="t12u7nq4 dir dir-ltr"
+                                  class="btn-background-image dir dir-ltr"
                                   style="
                                     background-position: calc(
                                         (100 - var(--mouse-x, 0)) * 1%
@@ -622,7 +622,7 @@
                                       calc((100 - var(--mouse-y, 0)) * 1%);
                                   "
                                 ></span></span
-                              ><span class="c4wd1yj dir dir-ltr"
+                              ><span class="btn-text dir dir-ltr"
                                 >Log in or sign up<!-- -->
                               </span></a
                             >
