--- a/landing-pages/full-screen-hero.html
+++ b/landing-pages/full-screen-hero.html
@@ -1272,9 +1272,9 @@
                                         <a
                                           href="/get-help-hosting"
                                           class="_108mstlv"
-                                          ><span class="tjxdvlu dir dir-ltr"
+                                          ><span class="btn-mask-image dir dir-ltr"
                                             ><span
-                                              class="t12u7nq4 dir dir-ltr"
+                                              class="btn-background-image dir dir-ltr"
                                               style="
                                                 background-position: calc(
                                                     (100 - var(--mouse-x, 0)) *
@@ -1286,7 +1286,7 @@
                                                   );
                                               "
                                             ></span></span
-                                          ><span class="c4wd1yj dir dir-ltr"
+                                          ><span class="btn-text dir dir-ltr"
                                             >Get started<!-- -->
                                           </span></a
                                         >
