--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1448,10 +1448,10 @@
                                                       data-veloute="checkout-flow-submit-button"
                                                     >
                                                       <span
-                                                        class="tjxdvlu dir dir-ltr"
+                                                        class="btn-mask-image dir dir-ltr"
                                                       >
                                                         <span
-                                                          class="t12u7nq4 dir dir-ltr"
+                                                          class="btn-background-image dir dir-ltr"
                                                           style="
                                                             background-position: calc(
                                                                 (
@@ -1475,7 +1475,7 @@
                                                         ></span>
                                                       </span>
                                                       <span
-                                                        class="c4wd1yj dir dir-ltr"
+                                                        class="btn-text dir dir-ltr"
                                                       >
                                                         <span class="_14d5b3i">
                                                           <span>
